Opening Mineatlas and Multimc link in a new Tab

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         La mise &agrave; jour de la carte est faite une fois par jour pendant la nuit.
                     </p>
                     <h3>World seed</h3>
-                    <p><a href="http://mineatlas.com/?levelName=4674907091838984161&seed=4674907091838984161">4674907091838984161</a></p>
+                    <p><a href="http://mineatlas.com/?levelName=4674907091838984161&seed=4674907091838984161"  target="_blank">4674907091838984161</a></p>
                     <h3>Mods install&eacute;s sur le serveur</h3>
                     <dir class="list">
                         <p>
@@ -170,7 +170,7 @@
                         </p>
                         <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Utilisez les mods client que vous voulez, mais sans nuire &agrave; l'exp&eacute;rience des autres joueurs ni &agrave; la v&ocirc;tre.<br><i>Seuls les noobs utilisent des mods comme X-RAY !</i><br>
-                            Utilisateurs de <a href="https://multimc.org/">MultiMC</a>, vous pouvez importer un profil align&eacute; sur la version du serveur et d&eacute;j&agrave; modd&eacute; avec Voxelmap et Mouse Wheelie <a href="/multimc/">ici</a>
+                            Utilisateurs de <a href="https://multimc.org/" target="_blank">MultiMC</a>, vous pouvez importer un profil align&eacute; sur la version du serveur et d&eacute;j&agrave; modd&eacute; avec Voxelmap et Mouse Wheelie <a href="/multimc/">ici</a>
                         </p>
                         <hr>
                         <p><img src="images/arrow-right.png" class="thumbnail-img">Le PVP est activ&eacute; sur le serveur, mais ne tuez pas les autres joueurs sans leur consentement.<br>Vous avez envie d'une bonne bataille ?
