Signs are not panels

--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
                     <li>Landmark</li>
                   </ul>
                   To add a tag on the map, you need to get in the game.<br>
-                  Then, place a panel made of any wood and write the type of tag in brackets on the first line (for example [Base]) and the text you want to be displayed on the world map in the following three lines<br>
+                  Then, place a sign made of any wood and write the type of tag in brackets on the first line (for example [Base]) and the text you want to be displayed on the world map in the following three lines<br>
                   <p>For example:</p>
                   <img src="images/poi-example.png" class="thumbnail-img"><br>
                   <h4>How to remove your points of interest from the Dynamic world map</h4>
-                  Simply remove the panel in-game.
+                  Simply remove the sign in-game.
                   <h4>How much time does it take for a POI to show-up on the Dynamic Map?</h4>
                   The map is updated once a day during the night in north America.
                   <br><br>
