Adding on-the-fly french translation link and quick fix in index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="#rules">Rules</a></li>
                     <li><a href="#addons">Add ons</a></li>
                     <li><a href="/mcmap" target="_blank">Dynamic Map</a></li>
+                    <li><a href="https://minecraft--family-ca.translate.goog/?_x_tr_sl=auto&_x_tr_tl=fr&_x_tr_hl=en&_x_tr_pto=wapp">Fran&ccedil;ais </a></li>
                 </ul>
             </nav>
         </header>
@@ -122,7 +123,7 @@
                   <h4>How to remove your points of interest from the Dynamic world map</h4>
                   Simply remove the sign in-game.
                   <h4>How much time does it take for a POI to show-up on the Dynamic Map?</h4>
-                  The map is updated once a day during the night in north America.
+                  The map is updated once a day during the night, north America time.
                   <br><br>
                   <hr>
                   <h3>Plugins</h3>
