--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                       <li>Create your base at a reasonable distance from the other players (say 500+ blocks). Some of your neighbors might be eager to expand! Always remember the Nether is here for traveling quickly from base to base.</li>
                       <li>Visit the world, marvel at the creations of others! But a creeper just exploded in your face, and it has damaged something that does not belong to you? Fill up the hole, repair the damage. It's really not possible? Leave an apology, mistakes happen.</li>
                       <li>Also, don't modify other people's creations without their permission.</li>
+		      <li>In a same way, never ever steal inside others chests, even if they are not hidden.</li>
                       <li>Use whatever client mods you want, as long as it does not impact the other player's experience.</li>
                       <li>PVP is enabled on the server, but don't kill other players without their consent.</li>
                       <li>You are in a mood for a good battle? Head over to the <a href="https://minecraft-family.ca/mcmap/#/1601/64/-187/max/family-server-world%20-%20overworld/familyserverday" target="_blank">PVP Arena</a> and have some fun!</li>
