Typo on Badlion client

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                       <hr>  
                       <h3>How to connect to the server</h3>
                       <ul>
-                        <li>You need a Minecraft client. Any client will work (<a href="https://www.minecraft.net/en-us/download" target="_blank">native</a>, <a href="https://multimc.org/" target="_blank">MultiMC</a>, <a href="https://client.badlion.net/" target="_blank">Badelion</a>, etc.) as long as it's <b>Java</b>.</li>
+                        <li>You need a Minecraft client. Any client will work (<a href="https://www.minecraft.net/en-us/download" target="_blank">native</a>, <a href="https://multimc.org/" target="_blank">MultiMC</a>, <a href="https://client.badlion.net/" target="_blank">Badlion</a>, etc.) as long as it's <b>Java</b>.</li>
                         <li>The current version of the server is <b>1.18.2</b>. It is very important for your client to run the exact same version than the server</li>
                         <li>Your Minecraft Player needs to be approved (whitelisted) on the server. Ask a friend or join the Discord server (link down below) if you want be authorized on the server.</li>
                       </ul>
